--- a/src/app/areas/home/home.html
+++ b/src/app/areas/home/home.html
@@ -1,12 +1,6 @@
-<section>
-	<div class="page-header">
-		<h1>{{vm.title | uppercase}}</h1>
-	</div>
-	
-	<div class="heroes" ng-repeat="hero in vm.heroes">
-		<div class="hero">
-			<h2><a ui-sref="shell.hero({hero: hero.key})">{{ hero.title }}</a></h2>
-			[{{ hero.role }}] {{ hero.caption | uppercase}}
-		</div>
-	</div>	
-</section>
+<h1>{{vm.title}}</h1>
+<p>Project to learn <strong>angular2</strong> and to create a simple app.</p>
+<p>Heroes images and visuals are based on <a href="http://eu.battle.net/heroes/en/">http://eu.battle.net/heroes/en/</a>.</p>
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, officia dolores? Recusandae quae, adipisci consequuntur quaerat ratione eos dignissimos consectetur culpa harum? Quaerat quae fuga sit repudiandae distinctio laboriosam assumenda! Temporibus ex quisquam dolor repellendus. Voluptatem, minus, consectetur aspernatur ipsa optio dolorum architecto assumenda dolor accusantium sequi rem. Officiis accusamus fuga neque deserunt expedita reprehenderit unde voluptates, dolore sequi! Eius doloremque quasi magnam enim rerum maiores voluptate doloribus totam deserunt laboriosam, molestiae autem. Dolores inventore atque, quam accusantium nam dolor assumenda libero deserunt ducimus omnis accusamus quisquam quibusdam magni similique aliquid earum! Corrupti eaque, perspiciatis beatae explicabo reprehenderit ipsam nesciunt.
+</p>
