--- a/src/app/areas/layout/layout.html
+++ b/src/app/areas/layout/layout.html
@@ -9,14 +9,17 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" ui-sref="shell.home">{{ vm.appTitle }} <small>{{ vm.appVersion }}</small></a>
+				<a class="navbar-brand" href="./">{{ vm.appTitle }} <small>{{ vm.appVersion }}</small></a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li>
+					<li ui-sref-active="active">
+						<a ui-sref="layout.heroes">Heroes</a>
+					</li>
+					<li ui-sref-active="active">
 						<a ui-sref="shell.basicform">Basic Form Example</a>
 					</li>
-					<li>
+					<li ui-sref-active="active">
 						<a ui-sref="shell.command-lab">Command lab</a>
 					</li>
 				</ul>
