added favicon + fixed error content to be the proper content

--- a/src/app/areas/error/error.html
+++ b/src/app/areas/error/error.html
@@ -1,12 +1,4 @@
-<section>
-	<div class="page-header">
-		<h1>{{vm.title | uppercase}}</h1>
-	</div>
-	
-	<div class="heroes" ng-repeat="hero in vm.heroes">
-		<div class="hero">
-			<h2><a ui-sref="shell.hero({hero: hero.key})">{{ hero.title }}</a></h2>
-			[{{ hero.role }}] {{ hero.caption | uppercase}}
-		</div>
-	</div>	
-</section>
+<div>
+	<h1>Oppssie an error has occurred!</h1>
+	<p>Try to refresh your browser.</p>
+</div>
